Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114873

Rendering is broken when moving window between monitors with OpenGL on macOS

    XMLWordPrintable

Details

    • macOS
    • d24c8ba5f (dev), 48c176e1b (dev), 1696091c5 (6.8), a1030dffd (tqtc/lts-6.5)

    Description

      Open Calqlatr example : https://doc.qt.io/qt-6/qtdoc-demos-calqlatr-example.html

      Change the RHI backend to OpenGL :

      qputenv("QSG_RHI_BACKEND", "opengl"); 

      Run the example. Move the window between MacBook screen and external monitor. Observe that content is stuck in wrong dimensions. See the attached video.

      Looks like some kind of DPI issue and triggering a UI event (e.g. window resize) seems to fix it. Note that it is only reproducible with OpenGL backend. Metal backend works fine.

      Display information :

      ➜ system_profiler SPDisplaysDataType
      Graphics/Displays:    Apple M1 Max:      Chipset Model: Apple M1 Max
            Type: GPU
            Bus: Built-In
            Total Number of Cores: 24
            Vendor: Apple (0x106b)
            Metal Support: Metal 3
            Displays:
              Color LCD:
                Display Type: Built-in Liquid Retina XDR Display
                Resolution: 3456 x 2234 Retina
                Main Display: Yes
                Mirror: Off
                Online: Yes
                Automatically Adjust Brightness: Yes
                Connection Type: Internal
              PHL 346E2C:
                Resolution: 3440 x 1440 (UWQHD - Ultra-Wide Quad HD)
                UI Looks like: 3440 x 1440 @ 75.00Hz
                Mirror: Off
                Online: Yes
                Rotation: Supported

      Attachments

        For Gerrit Dashboard: QTBUG-114873
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            muratseker Murat Seker
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: